--- a/index.html
+++ b/index.html
@@ -1,129 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="style.css">
+    <title>Bootstrap Example</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
 
-<div class="container flightForm">
-  <h2>Plan your trip</h2>
-  <ul class="nav nav-tabs">
-    <li class="active"><a data-toggle="tab" data-target="#flight">Flight</a></li>
-    <li><a data-toggle="tab" data-target="#hotel">Hotel</a></li>
-    <li><a data-toggle="tab" data-target="#flightHotel">Flight + Hotel</a></li>
-    <li><a data-toggle="tab" data-target="#holidays">Holidays</a></li>
-  </ul>
+    <div class="container flightForm">
+        <h2>Plan your trip</h2>
+        <ul class="nav nav-tabs nav-justified">
+            <li class="active"><a data-toggle="tab" data-target="#flight">Flight <i class="fa fa-plane"></i> </a></li>
+            <li><a data-toggle="tab" data-target="#hotel">Hotel <i class="fa fa-bed"></i></a></li>
+            <li><a data-toggle="tab" data-target="#flightHotel">Flight + Hotel <i class="fa fa-bed"></i></a></li>
+            <li><a data-toggle="tab" data-target="#holidays">Holidays <i class="fa fa-umbrella"></i></a></li>
+        </ul>
 
-  <div class="tab-content">
-    <div id="flight" class="tab-pane fade in active">
-      <div class="row">
-        <div class="col-sm-4">
-          <div>Book Domestic and International flights</div>
+        <div class="tab-content">
+            <div id="flight" class="tab-pane fade in active">
+                <div class="col-sm-8">
+                    <div class="row primaryRow">
+                        <div class="col-sm-6 col-xs-6">
+                            <div class="form-group">
+                                <input placeholder="Source" type="text" class="form-control">
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-xs-6">
+                            <div class="form-group">
+                                <input placeholder="Destination" type="text" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="tripType">
+                            <button class="btn btn-default btn-xs">One Way</button>
+                            <button class="btn btn-default active btn-xs">Return Trip</button>
+                            <button class="btn btn-default btn-xs">Multi City</button>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-6 col-xs-6">
+                            <div class="form-group">
+                                <input placeholder="Departing" type="text" class="form-control">
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-xs-6">
+                            <div class="form-group">
+                                <input placeholder="Returning" type="text" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-sm-4 col-xs-6 ">
+                            <div class="form-group">
+                                <select class="form-control">
+                                <option>Economy Class</option>
+                                <option>First Class</option>
+                                <option>Business Class</option>
+                            </select>
+                            </div>
+                        </div>
+                        <div class="col-sm-2 col-xs-2 ">
+                            <div class="form-group">
+                                <select class="form-control">
+                                <option>1 Adult</option>
+                                <option>2 Adult</option>
+                                <option>3 Adult</option>
+                                <option>4 Adult</option>
+                            </select>
+                            </div>
+                        </div>
+                        <div class="col-sm-2  col-xs-2 ">
+                            <div class="form-group">
+                                <select class="form-control">
+                                <option>0 Children</option>
+                                <option>1 Children</option>
+                                <option>2 Children</option>
+                                <option>3 Children</option>
+                            </select>
+                            </div>
+                        </div>
+                        <div class="col-sm-2 col-xs-2 ">
+                            <div class="form-group">
+                                <select class="form-control">
+                                <option>0 Infant</option>
+                                <option>1 Infant</option>
+                                <option>2 Infant</option>
+                                <option>3 Infant</option>
+                            </select>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <div class="form-group">
+                                <button class="btn-success btn">Search</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+            <div id="hotel" class="tab-pane fade">
+                <h3>Hotel</h3>
+                <p>Please excuse this dusty sample text, we are removing it very soon. </p>
+            </div>
+            <div id="flightHotel" class="tab-pane fade">
+                <h3>Flight + Hotel</h3>
+                <p>Please excuse this dusty sample text, we are removing it very soon. </p>
+            </div>
+            <div id="holidays" class="tab-pane fade">
+                <h3>Holidays</h3>
+                <p>Please excuse this dusty sample text, we are removing it very soon. </p>
+            </div>
         </div>
-        <div class="col-sm-4 tripType">
-          <div>
-            <button class="btn btn-default btn-xs">One Way</button> 
-            <button class="btn btn-default active btn-xs">Return Trip</button> 
-            <button class="btn btn-default btn-xs">Multi City</button>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-2 col-xs-6 paddingRZero">
-          <div class="form-group">
-            <label>Source</label>
-            <input type="text" class="form-control">
-          </div>
-        </div>
-        <div class="col-sm-2 col-xs-6 paddingRZero">
-          <div class="form-group">
-            <label>Destination</label>
-            <input type="text" class="form-control">
-          </div>
-        </div>
-        <div class="col-sm-1 col-xs-6 paddingRZero">
-          <div class="form-group">
-            <label>Departing</label>
-            <input type="text" class="form-control">
-          </div>
-        </div>
-        <div class="col-sm-1 col-xs-6 paddingRZero">
-          <div class="form-group">
-            <label>Returning</label>
-            <input type="text" class="form-control">
-          </div>
-        </div>
-        <div class="col-sm-1 col-xs-6 paddingRZero">
-          <div class="form-group">
-            <label>Class</label>
-            <select class="form-control">
-              <option>Economy</option>
-              <option>First</option>
-              <option>Business</option>
-            </select>
-          </div>
-        </div>
-        <div class="col-sm-1 col-xs-2 paddingRZero">
-          <div class="form-group">
-            <label>Adult</label>
-            <select class="form-control" >
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
-            </select>
-          </div>
-        </div>
-        <div class="col-sm-1  col-xs-2 paddingRZero">
-          <div class="form-group">
-            <label>Infant</label>
-            <select class="form-control" >
-              <option>0</option>
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-            </select>
-          </div>
-        </div>
-        <div class="col-sm-1  col-xs-2 paddingRZero">
-          <div class="form-group">
-            <label>Pets</label>
-            <select class="form-control" >
-              <option>0</option>
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-            </select>
-          </div>
-        </div>
-        <div class="col-sm-1">
-          <div class="form-group">
-            <label class="hidden-xs">&nbsp;</label>
-            <button class="btn-success btn" >Search</button>
-          </div>
-        </div>
-      </div>
     </div>
-    <div id="hotel" class="tab-pane fade">
-      <h3>Hotel</h3>
-      <p>Please excuse this dusty sample text, we are removing it very soon. </p>
-    </div>
-    <div id="flightHotel" class="tab-pane fade">
-      <h3>Flight + Hotel</h3>
-      <p>Please excuse this dusty sample text, we are removing it very soon. </p>
-    </div>
-    <div id="holidays" class="tab-pane fade">
-      <h3>Holidays</h3>
-      <p>Please excuse this dusty sample text, we are removing it very soon. </p>
-    </div>
-  </div>
-</div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
