--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="collapse navbar-collapse js-navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="dropdown mega-dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Book <span class="glyphicon glyphicon-chevron-down pull-right"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown">Book <b class="caret"></b></a>
                         <ul class="dropdown-menu mega-dropdown-menu row">
                             <li class="col-sm-3">
                                 <ul>
@@ -106,7 +106,7 @@
                         </ul>
                     </li>
                     <li class="dropdown mega-dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Prepare <span class="glyphicon glyphicon-chevron-down pull-right"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Prepare <b class="caret"></b></span></a>
                         <ul class="dropdown-menu mega-dropdown-menu row">
                             <li class="col-sm-3">
                                 <ul>
@@ -184,7 +184,7 @@
                         </ul>
                     </li>
                     <li class="dropdown mega-dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Fly <span class="glyphicon glyphicon-chevron-down pull-right"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Fly <b class="caret"></b></a>
                         <ul class="dropdown-menu mega-dropdown-menu row">
                             <li class="col-sm-3">
                                 <ul>
@@ -384,6 +384,7 @@
             </div>
         </div>
     </div>
+    <div id="log"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
